--- a/index.html
+++ b/index.html
@@ -2,9 +2,55 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	
+
+	<title>Scott Hunter Portfolio</title>
+
+<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+
+	<h1 id="name"> Scott Hunter </h1> 
 	
+<div class="topnav" id="toplinks">
+
+
+	<h2>Connect with Me</h2>
+	<nav>
+	<a href="index.html">About</a>
+	<a href="portfolio.html">Portfolio</a>
+	<a href="contact.html">Contact</a>
+     </nav>
+
+</div>
+
+
+    
+
+<h1> About Me </h1>
+<hr>
+<div class="middlelinks" id="midlinks">
+<img src="assets/images/scott.jpg" alt= "Scott" style="width:400px;height:500px;">
+<img src="assets/images/git.png" alt= "git" style="width:100px;height:150px;">
+<img src="assets/images/linkin.png" alt= "linkin" style="width:100px;height:150px;">
+<img src="assets/images/books.png" alt= "My Work" style="width:100px;height:150px;">
+</div>
+
+
+<div class="bio" id=bio>
+	
+	My name is Scott Hunter and I'm orginally from New Orleans. I have had several careers over the last 15 years. I have been a televison news reporter, owned a cupcake shop ,as well as, a beauty business. My latest venture is as a software developer. My interest in web development arose from my love of creating. Since I was a kid I have always created things. In my adult life I've shaped stories as a reporter later creating brands and products online and in brick and mortar enviorment.   
+
+
+<div class="smalllineh" id=smallline></div>
+<div class="scott" id=footer>
+@ Copywrite Scott Hunter 2017
+</div>
+
+
+
+
+	</div>
 </body>
 </html>
