--- a/portfolio.html
+++ b/portfolio.html
@@ -12,12 +12,10 @@
 <body>
 
 	<div> <h1= id"name"> Scott Hunter </h1>
-
-		<
 	
 <div class="topnav" id=toplinks>
 
-	<h2>Connect With Me</h2>
+	
 	
 	<a href="Index.html">About</a>
 	<a href="portfolio.html">Portfolio</a>
@@ -27,20 +25,7 @@
 
     
 
-<h1> Contact</h1>
-<form id = "contactss" method="post" action="">
-			<input type="text" name="contactz">
-			<label>Name </label>
-<input type="email" name="email"> 
-           <label>Email</label>
-           <label> Message</label>
-           <textarea></textarea>
-
-
-
-		</form>
-
-
+<h1> Portfolio </h1>
 <hr>
 <div class="middlelinks" id="middlel">
 
