--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-	<div> <h1= id"name"> Scott Hunter </h1>
+	 <h1= id"name"> Scott Hunter </h1>
 	
 <div class="topnav" id=toplinks>
 
